Initial post about MacStadium

--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
 
 		
 		
+		<div>
+			<a href="https://mikemadden42.github.io/posts/thanks-macstadium/">Thanks MacStadium</a><br />
+			<time>September 25, 2021</time>
+		</div>
+		<br />
+		
 
 
 		<h3><a href="posts/">View all posts</a></h3>
