Outline connecting to MacStadium.

--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
 		</div>
 		<br />
 		
+		<div>
+			<a href="https://mikemadden42.github.io/posts/connecting-to-macstadium/">Connecting to MacStadium</a><br />
+			<time>September 26, 2021</time>
+		</div>
+		<br />
+		
 
 
 		<h3><a href="posts/">View all posts</a></h3>
