--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
 		</div>
 		<br />
 		
+		<div>
+			<a href="https://mikemadden42.github.io/posts/mac-mini-cpu-speed/">Mac Mini CPU Speed</a><br />
+			<time>September 27, 2021</time>
+		</div>
+		<br />
+		
 
 
 		<h3><a href="posts/">View all posts</a></h3>
