Initial openssl benchmark post

--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
 		</div>
 		<br />
 		
+		<div>
+			<a href="https://mikemadden42.github.io/posts/mac-mini-openssl-speed/">Mac Mini OpenSSL Speed</a><br />
+			<time>October 12, 2021</time>
+		</div>
+		<br />
+		
 
 
 		<h3><a href="posts/">View all posts</a></h3>
